2000-09-22  Roland Schulz <rdschulz@abarrach.franken.de>

	* etc/afpd/volume.c (setvoltime): fix for multiple clients
	writing to same volume.

2000-02-28  a sun  <asun@asun.cobalt.com>

	* etc/afpd/directory.h (CNID_INODE): xor the inode a little
	differently. 

2000-02-23  a sun  <asun@asun.cobalt.com>

	* etc/afpd/volume.c (creatvol): / is a special case. you can't
	share it unless you give it a name.

2000-02-21  a sun  <asun@asun.cobalt.com>

	* distrib/initscripts/rc.atalk.redhat/cobalt: added changes to
	make redhat 6.x happier.

2000-02-17  a sun  <asun@asun.cobalt.com>

	* libatalk/adouble/ad_lock.c (adf_unlock): off-by-one error with
	lock removal. this + the log right below fix ragtime.

2000-02-16  a sun  <asun@asun.cobalt.com>

	* etc/afpd/fork.c (afp_bytelock): only error on bytelocks
	positioned at 0x7FFFFFFF if there's no resource fork.

2000-02-14  a sun  <asun@asun.cobalt.com>

	* libatalk/adouble/ad_lock.c: re-wrote locking bits so that
	allocations happen in blocks. added missing case that omnis
	database triggers.

2000-02-07  a sun  <asun@asun.cobalt.com>

	* bin/nbp/Makefile (install): make nbprgstr/nbpunrgstr with 700
	permissions. 

	* include/atalk/adouble.h (sendfile): change to deal with
	<sys/sendfile.h> 

2000-01-25  a sun  <asun@asun.cobalt.com>

	* etc/afpd/ofork.c: keep track of oforks being used for each
	directory so that we can update them if the directory tree gets
	modified. 

	* etc/afpd/directory.c (deletecurdir): remove dangling symlinks on
	delete. 

2000-01-24  a sun  <asun@asun.cobalt.com>

	* etc/afpd/directory.h (CNID): moved cnid assignment here along
	with helpful macros.

	* etc/afpd/directory.c: changed directory search to use red-black
	trees to improve balance. parent-child tree changed to circular
	doubly-linked list to speed up insert/remove times.  there's still
	one obstacle to actually freeing red-black tree entries. i need to
	add an ofork list to struct dir to minimize search times.
