@@ -7,6 +7,7 @@
 #undef DEBUG
 #undef DLSYM_PREPEND_UNDERSCORE
 #undef DROPKLUDGE
+#undef FORCE_UIDGID
 #undef HAVE_2ARG_DBTOB
 #undef HAVE_64BIT_LONGS
 #undef HAVE_BROKEN_CPP
