@@ -4,11 +4,17 @@ SUBDIRS = nls
 
 sbin_PROGRAMS = afpd
 
-afpd_SOURCES = unix.c ofork.c main.c switch.c auth.c volume.c directory.c file.c enumerate.c desktop.c filedir.c fork.c appl.c gettok.c status.c afp_options.c afp_asp.c afp_dsi.c messages.c afp_config.c nfsquota.c codepage.c quota.c uam.c afs.c
+afpd_SOURCES = unix.c ofork.c main.c switch.c auth.c volume.c directory.c \
+	 file.c enumerate.c desktop.c filedir.c fork.c appl.c gettok.c status.c \
+	 afp_options.c afp_asp.c afp_dsi.c messages.c afp_config.c nfsquota.c \
+	 codepage.c quota.c uam.c afs.c uid.c
+
 afpd_LDADD = $(top_srcdir)/libatalk/libatalk.a -latalk
 afpd_LDFLAGS = -rdynamic
 
-noinst_HEADERS = auth.h codepage.h afp_config.h desktop.h directory.h file.h filedir.h fork.h globals.h icon.h misc.h status.h switch.h uam_auth.h unix.h volume.h
+noinst_HEADERS = auth.h codepage.h afp_config.h desktop.h directory.h file.h \
+	 filedir.h fork.h globals.h icon.h misc.h status.h switch.h uam_auth.h \
+	 uid.h unix.h volume.h
 
 CFLAGS = @CFLAGS@ \
 	 -D_PATH_AFPDDEFVOL=\"$(CONFIG_DIR)/AppleVolumes.default\" \
